test/src/e2e_vm_tests/test_programs/should_fail/superabi_contract_call1/src/main.sw
contract;

abi MySuperAbi {
    fn super_abi_method();
}

abi MyAbi : MySuperAbi {
    fn abi_method();
} {
    // this must fail, because contract methods cannot call each other
    fn foo() { Self::super_abi_method() }
}
